# MacMarkdownViewer

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MarkdownViewer.html  README.md  SECURITY.md  index.html  package-lock.json  package.json  vite.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: contributing.md  index.md
docs/.vitepress/: config.ts
docs/.vitepress/theme/: custom.css  index.ts
docs/guide/: features.md  getting-started.md  security.md
docs/reference/: keyboard-shortcuts.md  markdown-support.md
examples/: README.md  alerts.md  code-highlighting.md  footnotes.md  images.md  math-katex.md  mermaid-diagrams.md  mixed-content.md  tables-extended.md  task-lists.md  typography.md
src/: dom.ts  integration.test.ts  main.ts  markdown.test.ts  markdown.ts  marked-extended-tables.d.ts  utils.test.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
